testsuite/tests/rename/should_compile/T4240.hs

module T4240 where

import T4240B

v :: Int
v = m

