testsuite/tests/rename/should_fail/T5385a.hs
module T5385a where

data T = Int ::: Int
